--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1"
